# timetracker

./: .gitignore  LICENSE  README.rst  pyproject.toml  requirements.txt  utils.py  wsgi.py
migrations/: env.py
migrations/versions/: 04d9461f0eef_added_auth_user_model.py  0cced11845fb_added_task_and_time_log_models.py  22c8122a93fd_added_time_log_model.py
static/: style.css
templates/: _messages.html  _navbar.html  base.html  log_delete.html  log_form.html  log_list.html  signin.html  signup.html  timelog_delete.html  timelog_list.html
