[tool.poetry]
name = "timetracker"
version = "0.1.0"
description = ""
authors = ["Serhii Horodilov <sgorodil@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
Flask-WTF = "^1.0.1"
Flask-Login = "^0.6.2"
Flask-Bcrypt = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
